--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,8 +26,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  camera: ^0.10.3
+  camera: ^0.10.3+2
   universal_io: ^2.0.4
+  camera_windows: ^0.2.1+5
 
 dev_dependencies:
   flutter_test:
